# Notification-Engine

./: .gitignore  main.py  pyproject.toml
app/: config.py
app/api/: handlers.py  main.py  middleware.py
app/broker/: kafka_client.py  router.py
app/cache/: bloom_filter.py  redis_client.py
app/domain/: models.py  state_machine.py
app/repository/: database.py  notification.py
app/worker/: batcher.py  consumer.py  main.py  rate_limiter.py
tests/: test_phase1.py  test_phase2.py  test_phase3.py
